# tush

./: .gitignore  CHANGELOG.md  Cargo.toml  Grr.hs  Imp.hs  LICENSE  Main  Main.hi  Main.hs  Main.lhs  Misc.hs  README.md  TODO.md  TODO.txt  Token.hs  Tsf.hs  UNLICENSE  parse.lhs  tush.cabal
Examples/: array.sh  arrows.sh  error.sh  function.sh  script.sh
Grr/: Glob.hs  NamedRanges.hs  PLANS.md  README.md  Regex.hs
Imp/: README.md
Interpret/: Data.hs  Evaluate.hs  Operators.hs  Parse.hs  Token.hs
Tsf/: README.md
Tssl/: Data.hs  Evaluate.hs  Operators.hs  Parse.hs  Token.hs
concept/: Main  Main.hi
simp/: README.md
src/: main.rs
src/lit/: mod.rs
test/: Main.hs
tush/: Cargo.toml
tush-interpreter/: Main.hs
tush/src/: lib.rs  main.rs
v2/: Cargo.toml
v2/specs/: FRONT.md  IMPLEMENTATION.md  ISSUES.md  SPECS.md
v2/src/: lib.rs
v2/src/tsf/: config.rs  editor.rs  keymap.rs  mod.rs  render.rs
v2/src/tssl/: mod.rs  tokenize.rs
