cabal-version:      3.0
name:               tush
version:            0.1.0.0
synopsis:           Thick, slow shell.
-- description:
license:            0BSD
license-file:       LICENSE
author:             Jarukit Manuswiyoungkul
maintainer:         pleaseletmeinijustwanttoemail@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable tush
    import:           warnings
    main-is:          Main.hs
    other-modules:    Misc,
                      Tssl.Token,
                      Tssl.Parse,
                      Tssl.Evaluate,
                      Tssl.Data,
                      Tssl.Operators,
                      Grr.Glob,
                      Grr.NamedRanges,
                      Grr.Regex,
                      Grr,
                      Tsf,
                      Imp,
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0,
                      vty-crossplatform,
                      vty,
                      containers,
                      directory,
                      process,
                      text,
                      bytestring,
                      ghc,
                      array,
    hs-source-dirs:   .
    default-language: GHC2024
    -- default-extensions: OverloadedStrings
